objects/User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Because__c</fullName>
        <description>Why? Because....</description>
        <inlineHelpText>What is the value behind this request? What does this enable? How does this help?</inlineHelpText>
        <label>Because</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales, Inside</fullName>
                </value>
                <value>
                    <fullName>Sales, Operations</fullName>
                </value>
                <value>
                    <fullName>Deal Desk</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>Fast Track</fullName>
                </value>
                <value>
                    <fullName>Data Deduplication</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Demand Waterfall</fullName>
                </value>
                <value>
                    <fullName>IMD</fullName>
                </value>
                <value>
                    <fullName>ROL</fullName>
                </value>
                <value>
                    <fullName>Sales Org (EC)</fullName>
                </value>
                <value>
                    <fullName>Sales Org (HC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Am_A__c</fullName>
        <inlineHelpText>What is the role or responsibility that this User Story pertains to?</inlineHelpText>
        <label>I Am</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Engineering / R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Want__c</fullName>
        <inlineHelpText>A short concise sentence or two that describes the need.</inlineHelpText>
        <label>I Want</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>User Stories capture initial, high-level objectives and outcomes that are desired. 

User Stories captures what a user does or needs to do as part of his or her job function.

User Stories captures the 'who', 'what' and 'why' of a requirement in a simple, concise way.

User Stories serve as the foundation from which all requirements will be built off of.</description>
    <label>User Story</label>
    <nameField>
        <label>USR ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPQ_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>CPQ</value>
        </filters>
        <label>CPQ User Stories</label>
    </listViews>
    <listViews>
        <fullName>Customer_Support_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Track__c</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Customer Support</value>
        </filters>
        <label>Customer Support User Stories</label>
    </listViews>
    <listViews>
        <fullName>Engineering_R_D_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Engineering / R&amp;D</value>
        </filters>
        <label>Engineering / R&amp;D User Stories</label>
    </listViews>
    <listViews>
        <fullName>Finance_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <label>Finance User Stories</label>
    </listViews>
    <listViews>
        <fullName>Legal_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filters>
        <label>Legal User Stories</label>
    </listViews>
    <listViews>
        <fullName>Marketing_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing User Stories</label>
    </listViews>
    <listViews>
        <fullName>Professional_Services_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </filters>
        <label>Professional Services User Stories</label>
    </listViews>
    <listViews>
        <fullName>Sales_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>I_Am_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>Because__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Sales User Stories</label>
        <language>en_US</language>
    </listViews>
</CustomObject>